[project]
name = "comfyui-pixel-anchored-remaster"
description = "Pixel Anchored Remaster for ComfyUI."
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.urls]
Repository = "https://github.com/NotProniss/ComfyUI_PixelAnchoredRemaster"

[tool.comfy]
PublisherId = "proniss"
DisplayName = "ComfyUI Pixel Anchored Remaster"
