[project]
name = "pixel-anchored-remaster"
description = "Pixel Anchored Remaster for ComfyUI."
version = "0.1.1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.urls]
Repository = "https://github.com/NotProniss/PixelAnchoredRemaster"

[tool.comfy]
PublisherId = "proniss"
DisplayName = "Pixel Anchored Remaster"
